<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stech.yendee.samaporn.mystech.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        android:padding="@dimen/margin2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_name1" />

            <EditText
                android:id="@id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:src="@mipmap/ic_surname" />

            <EditText
                android:id="@id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_address" />

            <EditText
                android:id="@id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user1" />

            <EditText
                android:id="@id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password1" />

            <EditText
                android:id="@id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
