<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stech.yendee.samaporn.mystech.MainActivity">

    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/sriwattana"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_centerInParent="true"
        android:padding="@dimen/margin2"
        android:layout_margin="@dimen/margin"
        android:background="#86ffffff"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name_sriwattana"
            android:textColor="@color/colorText"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin2"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/ic_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtUser"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />





        </LinearLayout>

        <LinearLayout

            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/ic_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtPassword"
                android:hint="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />





        </LinearLayout>

        <TextView
            android:clickable="true"
            android:id="@+id/txtRegister"
            android:textStyle="bold"
            android:textColor="#f40404"
            android:textSize="@dimen/h2"
            android:text="@string/new_register"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:clickable="true"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
